gen/websecurityscanner/v1alpha/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-websecurityscanner1_alpha v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/websecurityscanner/v1alpha/lib)
error[E0423]: expected value, found struct `scan_configs::ScanConfigsActions`
    --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:1255:13
     |
1255 |             scan_configs::ScanConfigsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `scan_configs::ScanConfigsActions { /* fields */ }`?

error[E0423]: expected value, found struct `scan_runs::ScanRunsActions`
    --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:1399:17
     |
1399 |                 scan_runs::ScanRunsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `scan_runs::ScanRunsActions { /* fields */ }`?

error[E0423]: expected value, found struct `crawled_urls::CrawledUrlsActions`
    --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:2352:21
     |
2352 |                     crawled_urls::CrawledUrlsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `crawled_urls::CrawledUrlsActions { /* fields */ }`?

error[E0423]: expected value, found struct `finding_type_stats::FindingTypeStatsActions`
    --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:2356:21
     |
2356 |                     finding_type_stats::FindingTypeStatsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `finding_type_stats::FindingTypeStatsActions { /* fields */ }`?

error[E0423]: expected value, found struct `findings::FindingsActions`
    --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:2360:21
     |
2360 |                     findings::FindingsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `findings::FindingsActions { /* fields */ }`?

warning: unreachable expression
   --> gen/websecurityscanner/v1alpha/lib/src/lib.rs:668:13
    |
668 | /             Ok(match value {
669 | |                 _ => {
670 | |                     return Err(::serde::de::Error::custom(format!(
671 | |                         "invalid enum for #name: {}",
...   |
674 | |                 }
675 | |             })
    | |______________^
    |
    = note: #[warn(unreachable_code)] on by default

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-websecurityscanner1_alpha`.

To learn more, run the command again with --verbose.
